[tool.poetry]
name = "rocksdb-statistics"
version = "0.0.1"
authors = [
  "Hans-Wilhelm Warlo <hw@warlo.no>"
]
description = "Parses db_bench.log files outputted from RocksDB"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/warlo/rocksdb-statistics/"
packages = [
    { include = "rocksdb-statistics" }
]


[tool.poetry.dependencies]
python = "^3.7"
black = "22.8.0"
isort = "5.10.1"
mypy = "0.982"

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = "venv"